feat: re-generate openapi files with new pages specifications
