# src/gen/bikehub/model/models.ts
@@ -3,19 +3,23 @@ export * from './authLogin';
 export * from './bicycle';
 export * from './bicycleCategory';
 export * from './bicycleStatus';
+export * from './bicyclesPage';
 export * from './createBicycle';
 export * from './createEquipment';
 export * from './createPaymentMethod';
 export * from './createRental';
 export * from './equipment';
 export * from './equipmentType';
+export * from './equipmentsPage';
 export * from './errorResponse';
 export * from './login';
+export * from './page';
 export * from './payRental';
 export * from './paymentMethod';
 export * from './paymentType';
 export * from './rental';
 export * from './rentalStatus';
+export * from './rentalsPage';
 export * from './returnRentalDetails';
 export * from './signUp';
 export * from './signUp201Response';
