# src/gen/bikehub/model/page.ts
@@ -1,0 +1,17 @@
+/**
+ * BikeHubParthenope
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface Page { 
+    totalItems?: number;
+    currentPage?: number;
+    totalPages?: number;
+}
+
