# src/gen/bikehub/model/rentalsPage.ts
@@ -1,0 +1,19 @@
+/**
+ * BikeHubParthenope
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { Rental } from './rental';
+
+
+export interface RentalsPage { 
+    totalItems?: number;
+    currentPage?: number;
+    totalPages?: number;
+    results?: Array<Rental>;
+}
+
